--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,8 @@ body > section > ul {
 .GreenLight, .YellowLight, .RedLight {
   width:100px;
   height:100px;
-  border-radius:50%; background:black;
+  border-radius:50%;
+  background:black;
   border: 2px solid white;
 }
 
